# hyperbib

./: .gitignore  dune-project  flake.nix  hyperbib.opam  hyperbib.opam.template  package-defs.json
src/: bibtex.ml  date.mli  db.ml  dune  hyperbib.ml  schema.mli
src/front/: doi_relinker.ml  dune
src/html/: home_html.ml
src/schema/: bibliography.ml
