opam-version: "2.0"
name: "hyperbib"
synopsis: "Publish annotated bibliographies"
description: """\
Hyperbib is a web application to edit and publish annotated
bibliographies.

See a few [screenshots](#screenshots).

Hyperbib is distributed under the ISC license."""
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: "The hyperbib programmers"
license: ["ISC" "OFL-1.1" "MIT"]
tags: ["app" "bibliography" "org:erratique"]
homepage: "https://erratique.ch/software/hyperbib"
doc: "https://erratique.ch/software/hyperbib/doc"
bug-reports: "https://github.com/dbuenzli/hyperbib/issues"
depends: [
  "ocaml" {>= "4.12"}
  "ocamlfind" {build}
  "b0" {build}
  "cmdliner" {>= "1.0.4"}
  "ptime"
  "webs"
  "htmlit"
  "htmlact"
  "rel"
  "note"
  "brr"
  "js_of_ocaml"
]
build: "b0"
dev-repo: "git+https://erratique.ch/repos/hyperbib.git"
pin-depends: [
  ["b0.~dev" "git+https://erratique.ch/repos/b0.git#master"]
  ["htmlact.~dev" "git+https://erratique.ch/repos/htmlact.git#master"]
  ["rel.~dev" "git+https://erratique.ch/repos/rel.git#master"]
  ["webs.~dev" "git+https://github.com/patricoferris/webs.git#2c9f637ff22feba92b334cd761be6f3725f0a408"]
]
