(library
 (name hyperbib)
 (public_name hyperbib)
 (wrapped false)
 (flags (-w -27-32-33))
 (libraries
  b0.std
  b0.tool
  bos
  fmt
  rel
  rel.kit
  rel.sqlite3
  rel.pool
  rel.cli
  webs
  webs.kit
  webs.cli
  htmlit
  htmlact
  ptime
  ptime.clock.os))

(include_subdirs unqualified)

(rule
 (deps
   %{project_root}/src/front/hyperbib_front.bc.js)
 (targets hyperbib.js)
 (action
   (copy %{project_root}/src/front/hyperbib_front.bc.js hyperbib.js)))

(install
 (section share_root)
 (files    (front/hyperbib.css as static/hyperbib.css)
           (glob_files (front/fonts/* with_prefix static/fonts))
           (hyperbib.js as static/hyperbib.js)))

(rule
 (targets stamp.ml)
 (action (with-stdout-to stamp.ml (run echo "let version = \"TODO\" let static_files = \"TODO\""))))
